After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759596 - networkmanager-1.0.6: spams log with: cannot send router solicitation: -101.
networkmanager-1.0.6: spams log with: cannot send router solicitation: -101.
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: IP and DNS config
1.0.x
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-12-17 14:23 UTC by Till Schäfer
Modified: 2016-04-17 11:12 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Till Schäfer 2015-12-17 14:23:14 UTC
About 95% of my whole system log is occupied by just a single repeating line: 

Dec 17 15:14:24 nb-algecraft NetworkManager[335]: <error> [1450361664.941063] [/var/tmp/portage/net-misc/networkmanager-1.0.6-r1/work/NetworkManager-1.0.6/src/rdisc/nm-lndp-rdisc.c:68] send_rs(): (wlp4s0): cannot send router solicitation: -101.

This message repeats every 5 seconds. I am on a non IPv6 network.

I expect the logging to be less freuqent. Especially because this seems to be a normal behavior in non ipv6 networks. 



system detail: 
- gentoo 
- networkmanager 1.0.6
- dhclient 4.3.1
- kernel 4.1.12
Comment 1 Till Schäfer 2015-12-17 14:32:17 UTC
the problem was also reported for red hat and debian (by some other users)

https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=775736
https://bugzilla.redhat.com/show_bug.cgi?id=1034443
https://bugzilla.redhat.com/show_bug.cgi?id=1010540
Comment 2 Till Schäfer 2015-12-17 14:34:13 UTC
and ubuntu: 
https://lists.launchpad.net/touch-packages/msg75697.html
Comment 4 Till Schäfer 2015-12-17 18:21:53 UTC
cool, that was fast. THX
Comment 5 Pacho Ramos 2016-04-16 10:45:58 UTC
Can this also be backported to 1.0 branch for getting it solved there in a potential new version?

Thanks a lot
Comment 6 Thomas Haller 2016-04-17 11:07:42 UTC
(In reply to Pacho Ramos from comment #5)
> Can this also be backported to 1.0 branch for getting it solved there in a
> potential new version?
> 
> Thanks a lot

backported to nm-1-0: https://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=645bf63e0b9e66fce984c866569f51f6d335a53c
Comment 7 Pacho Ramos 2016-04-17 11:12:47 UTC
Thanks a lot :)